Fixed spelling error

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </header>
 
         <ul class="apps">
-            <li><a href="./nota"><img src="i/nota.svg" alt="Nota icon" /></a><br />Nota<br />Uopdatef for iOS 11</li>
+            <li><a href="./nota"><img src="i/nota.svg" alt="Nota icon" /></a><br />Nota<br />Updated for iOS 11</li>
             <li><a href="./margana"><img src="i/margana.png" alt="Margana icon" /></a><br />Margana Word Puzzle</li>
             <li><a href="./thinkertoy"><img src="i/thinkertoy.svg" alt="ThinkerToy Shapes icon" /></a><br />ThinkerToy: Shapes</li>
             <li><a href="./thirtyaday"><img src="i/thirtyaday.svg" alt="thirtyaday icon" /></a><br />thirtyaday</li>
