--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Add your site or application content here -->
         <header class="header">
             <h1 class="header__title">All Forces</h1>
-            <p class="header__tagline">Handcrafted apps by <a href="#">Melvin Rivera</a></p>
+            <p class="header__tagline">Handcrafted apps by <a href="http://melvitax.com">Melvin Rivera</a></p>
         </header>
 
         <ul class="apps">
