--- a/nota/index.html
+++ b/nota/index.html
@@ -1,46 +1,281 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+	<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Nota Piano App</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+    <title>Nota - Piano music app for the iPhone and iPad</title>
+    <meta name="description" content="An indispensible music learning app. Nota's impressive collection of tools includes 152 chords, 167 scales , 133 searchable reference items and a notes quiz.">
+    <meta name="keywords" content="">
 
-  <link rel="stylesheet" href="css/style.css" />
+    <!-- Social: Facebook -->
+    <meta property="og:type" content="article" />
+    <meta property="og:image" content="http://allforces.com/nota/assets/images/socialimage.jpg" />
+    <!-- Social: Twitter -->
+    <meta name="twitter:card" content=" site.socialImage " />
+    <meta name="twitter:title" content="Nota - Piano music app for the iPhone and iPad" />
+    <meta name="twitter:description" content="An indispensible music learning app. Nota's impressive collection of tools includes 152 chords, 167 scales , 133 searchable reference items and a notes quiz." />
+    <meta name="twitter:image" content="http://allforces.com/nota/assets/images/socialimage.jpg" />
+    <!-- Social: Shared -->
+    <meta property="og:url" content="">
+    <meta property="og:title" content="Nota - Piano music app for the iPhone and iPad" />
+    <meta property="og:description" content="An indispensible music learning app. Nota's impressive collection of tools includes 152 chords, 167 scales , 133 searchable reference items and a notes quiz." />
 
-  <link rel="apple-touch-icon" href="images/152.jpg">
-  <link rel="icon" sizes="192x192" href="images/192.jpg">
+    <!-- CSS -->
+    <link rel="stylesheet" href="./assets/css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-	<meta name="description" content="Music learning is now available in your pocket with Nota, the best music learning tool for the iPhone and iPod Touch." />
-	<meta name="keywords" content="music, piano, flashcards, music symbols, learn music, learn piano, music quiz, music theory, music notes, chords, scales, circle of fives" />
-	<meta name="description" content="The best music learning tool on the iPhone" />
+    <!-- Icons -->
+    <link rel="icon" href="./favicon.ico" sizes="16x16 32x32"> <!-- Legacy -->
+    <link rel="icon" href="./icon-128.svg" type="image/svg+xml"><!-- SVG -->
+    <link rel="apple-touch-icon" href="./icon-180.png"><!-- Apple -->
+    <link rel="manifest" href="./manifest.webmanifest"><!-- Android -->
 
-	<meta name="apple-itunes-app" content="app-id=333179169">
-
-</head>
-
-<body>
+  </head>
   
-  <div class="content">
-    <img class="iphone" src="images/nota-iphone.png" alt="" />
-    <h1>Nota</h1>
-    <p>An indispensable tool for musicians of any level.</p>
+	<body class="layout-default">
+		<header class="header pb-4">
+    <nav class="nav">
+        <div class="container">
+            <div class="text-center pt-2">
+                <h1 class="fw-bold pt-5 text-center">Nota - Piano music app for the iPhone and iPad</h1> 
+            </div>
+        </div>
+    </nav>
+</header>
 
-    <a href="http://appstore.com/allforces/nota"><img src="images/app-store-badge.svg" alt="Download on the App Store"></a>
+		<div class="no-observer">
+
+  <div class="container px-4 py-2 bg-light rounded">
+    <div class="row g-4 py-1 row-cols-1 row-cols-lg-3">
+      <div class="col d-flex align-items-start">
+        <div>
+          <div class="fs-2 text-success">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+          <blockquote class="blockquote">&ldquo;An indispensible tool for anyone learning music&rdquo;</blockquote>
+          <figcaption class="blockquote-footer">Alf Bishai, Composer &amp; Professor at NYU</figcaption>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <div>
+          <blockquote class="blockquote">&ldquo;Nota is a sweet melody to musicians... very polished and definitely a pleasure to use&rdquo;</blockquote>
+          <figcaption class="blockquote-footer">Josh Carr, TUAW</figcaption>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <div>
+          <blockquote class="blockquote">&ldquo;A great investment for professional musicians and students alike&rdquo;</blockquote>
+          <figcaption class="blockquote-footer">The Apple Blog, Pick Of The Week</figcaption>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <div class="wrapper animate alt-row">
+      <div class="container">
+          <div class="row align-items-center py-5">
+              <div class="col-12 col-md-6 p-5 text-end">
+                  <div class="d-inline-block bg-dark p-3 rounded-5">
+                      <img src="./assets/images/nota-piano.png" class="rounded-5" alt="Nota Music App - Piano" width="295" height="640">
+                  </div>
+              </div>
+              <div class="col-12 col-md-6 p-5">
+                <h2 class="py-2 fw-bold">DOWNLOAD THE FREE APP</h2>
+                <div class="callout">
+    <a class="store-badge badge-app-store" href="http://appstore.com/allforces/nota"">Download on the App Store</a>
+</div>
+                <p class="py-2">Improve your music knowledge with Nota's impressive collection of piano tools. Browse or play any chord or scale in any key. Practice your skills with the notes quiz and look up any music symbol in the reference library.</p>
+              </div>
+          </div>
+      </div>
   </div>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3488813-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <div class="container px-4 py-5" id="hanging-icons">
+    <h2 class="pb-2 border-bottom">Features</h2>
+    <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+      <div class="col d-flex align-items-start">
+        <div class="bg-body-secondary rounded p-2 me-3">
+          <img src="./assets/images/icon-piano.svg" alt="icon for piano" width="32" height="32" />
+        </div>
+        <div>
+          <h5 class="fs-2 text-body-emphasis">Piano</h5>
+          <p>4 octave piano that displaying notes on a staff.</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <div class="bg-body-secondary rounded p-2 me-3">
+          <img src="./assets/images/icon-chords.svg" alt="icon for chords" width="32" height="32" />
+        </div>
+        <div>
+          <h5 class="fs-2 text-body-emphasis">Chords Browser</h5>
+          <p>A chords browser with 152 types to choose from and the ability to invert chords.</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <div class="bg-body-secondary rounded p-2 me-3">
+          <img src="./assets/images/icon-scales.svg" alt="icon for scales" width="32" height="32" />
+        </div>
+        <div>
+          <h5 class="fs-2 text-body-emphasis">Scales Browser</h5>
+          <p>A scales browser with 167 types of scales and the ability to play them in any key.</p>
+        </div>
+      </div>
+  
+      <div class="col d-flex align-items-start">
+        <div class="bg-body-secondary rounded p-2 me-3">
+          <img src="./assets/images/icon-quiz.svg" alt="icon for quiz" width="32" height="32" />
+        </div>
+        <div>
+          <h5 class="fs-2 text-body-emphasis">Quiz</h5>
+          <p>A notes quiz where you can test your music notation knowledge.</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <div class="bg-body-secondary rounded p-2 me-3">
+          <img src="./assets/images/icon-reference.svg" alt="icon for reference library" width="32" height="32" />
+        </div>
+        <div>
+          <h5 class="fs-2 text-body-emphasis">Reference Library</h5>
+          <p>A collection of 133 searchable musical symbols and their meaning.</p>
+        </div>
+      </div>
+      <div class="col d-flex align-items-start">
+        <div class="bg-body-secondary rounded p-2 me-3">
+          <img src="./assets/images/icon-options.svg" alt="icon for options" width="32" height="32" />
+        </div>
+        <div>
+          <h5 class="fs-2 text-body-emphasis">Extra Options</h5>
+          <p>Support for international notation, sharp or flat note resolution, and auto playing sound.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-    gtag('config', 'UA-3488813-1');
-  </script>
+  <div class="wrapper animate">
+      <div class="container">
+          <div class="row align-items-center py-5">
+              <div class="col-12 col-md-6 p-5">
+                  <h2 class="py-2 fw-bold">CHORDS GALLORE</h2>
+                  <p class="py-2">Need to look up the Dominant 7th chord on the key of C? Nota includes a chords browser with up to 152 chords. You can play them in any key and even invert them.</p>
+              </div>
+              <div class="col-12 col-md-6 p-5">
+                <div class="position-relative">
+                  <div class="d-inline-block bg-dark p-3 rounded-5 z-1">
+                    <img src="./assets/images/nota-chords.jpg" class="rounded-5" alt="Nota Music App - Chords" width="295" height="640">
+                  </div>
+                  <div class="d-inline-block bg-dark p-3 rounded-5 z-0 position-absolute start-50">
+                    <img src="./assets/images/nota-chords-browse.jpg" alt="Nota Music App - Chord Browser"  width="295" height="640">
+                  </div>
+                </div>
+              </div>
+          </div>
+      </div>
+  </div>
 
+  <div class="wrapper animate alt-row clearfix">
+      <div class="container">
+          <div class="row align-items-center py-5">
+              <div class="col-12 col-md-6 p-5 text-end">
+                  <div class="d-inline-block bg-dark p-3 rounded-5">
+                      <img src="./assets/images/nota-scales.jpg" class="rounded-5" alt="Nota Music App - Scales"  width="295" height="640">
+                  </div>
+              </div>
+              <div class="col-12 col-md-6 p-5">
+                  <h2 class="py-2 fw-bold">SCALES BROWSER</h2>
+                  <p class="py-2">From Major to Minor to Myxolidian. The scales browser allows you to look up 167 scale types and play them in any key.</p>
+              </div>
+          </div>
+      </div>
+  </div>
 
-</body>
+  <div class="wrapper animate">
+      <div class="container">
+          <div class="row align-items-center py-5">
+              <div class="col-12 col-md-6 p-5">
+                  <h2 class="py-2 fw-bold">QUIZ THE BASICS</h2>
+                  <p class="py-2">Learn with a direct relationship of musical notation to piano keys. The Quiz can be set to Easy with 34 notes or Advanced with 82 notes that includes Sharp and Flats.</p>
+              </div>
+              <div class="col-12 col-md-6 p-5">
+                <div class="position-relative">
+                  <div class="d-inline-block bg-dark p-3 rounded-5 z-1">
+                    <img src="./assets/images/nota-quiz-intro.jpg" class="rounded-5" alt="Nota Music App - Quiz Intro" width="295" height="640">
+                  </div>
+                  <div class="d-inline-block bg-dark p-3 rounded-5 z-0 position-absolute start-50">
+                    <img src="./assets/images/nota-quiz.jpg" alt="Nota Music App - Quiz"  width="295" height="640">
+                  </div>
+                </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  <div class="wrapper animate alt-row">
+      <div class="container">
+          <div class="row align-items-center py-5 ">
+              <div class="col-12 col-md-6 p-5 text-end">
+                  <div class="d-inline-block bg-dark p-3 rounded-5">
+                      <img src="./assets/images/nota-reference.jpg" class="rounded-5" alt="Nota Music App - Reference"  width="295" height="640">
+                  </div>
+              </div>
+              <div class="col-12 col-md-6 p-5">
+                  <h2 class="py-2 fw-bold">REFERENCE LIBRARY</h2>
+                  <p class="py-2">An extensive Reference Library with over 100 items that includes:</p>
+                  <ul>
+                    <li>Accents &amp; Accidentals</li>
+                    <li>Lines, Breaks &amp; Clefs</li>
+                    <li>Key Signatures</li>
+                    <li>Chords</li>
+                    <li>Circle of Fifths</li>
+                    <li>Dynamics</li>
+                    <li>Note Relationships</li>
+                    <li>Notes</li>
+                    <li>Notes &amp; Duration</li>
+                    <li>Repetition &amp; Codas</li>
+                    <li>Rest &amp; Durations</li>
+                    <li>Time Signatures</li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  
+
+  <div class="wrapper animate alt-row">
+    <div class="container"><div class="callout">
+    <a class="store-badge badge-app-store" href="http://appstore.com/allforces/nota"">Download on the App Store</a>
+</div></div>
+  </div>
+
+</div>
+		<footer class="text-muted w-100 py-5">
+    <div class="container">
+      <hr />
+      <p class="float-end"><a href="#">Back to top</a></p>
+      <p>
+        Last Updated: April 10, 2024 <br />
+         Nota - Piano music app for the iPhone and iPad is a project by <a href="http://melvitax.com">Melvin Rivera</a>
+      </p>
+    </div>
+  </footer>
+
+		<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<!-- Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+<!-- intersection-observer -->
+<script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver"></script>
+<!-- VideoJS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.18.1/video.min.js" integrity="sha512-ihOGFnO6EsSOoAW2wY28HdHiCuc9SYCt4b2yr3UcjLGySDTELNwJvDteq//Sr4BmvVoNRsPpSKsTMd4roJnQtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-youtube/2.6.1/Youtube.min.js" integrity="sha512-mF+XuiEvJq707N/B9Fm/fI2wgMcWuFLsoztIp0UzEKgHCZgczbYpO2+Vq2TEi0LmE4crVj2r8AYru7X5QjVotw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- FontAwesome -->
+<script src="https://kit.fontawesome.com/d4493c788f.js" crossorigin="anonymous"></script>
+<!-- Main -->
+<script async src="/assets/js/main.js"></script>
+<!-- AppStoreAffilate -->
+<script type='text/javascript'>
+    var _merchantSettings=_merchantSettings || [];_merchantSettings.push(['AT', '10ltcZ']);(function(){var autolink=document.createElement('script');autolink.type='text/javascript';autolink.async=true; autolink.src= ('https:' == document.location.protocol) ? 'https://autolinkmaker.itunes.apple.com/js/itunes_autolinkmaker.js' : 'http://autolinkmaker.itunes.apple.com/js/itunes_autolinkmaker.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(autolink, s);})();
+</script>
+
+	</body>
 </html>
