--- a/nota/index.html
+++ b/nota/index.html
@@ -253,7 +253,7 @@
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>
         Last Updated: April 10, 2024 <br />
-         Nota - Piano music app for the iPhone and iPad is a project by <a href="http://melvitax.com">Melvin Rivera</a>
+         Other apps by  <a href="http://allforces.com">All Forces</a>
       </p>
     </div>
   </footer>
