--- a/nota/index.html
+++ b/nota/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Nota - Piano music app for the iPhone and iPad</title>
+    <title>Nota - A piano music app for the iPhone</title>
     <meta name="description" content="An indispensible music learning app. Nota's impressive collection of tools includes 152 chords, 167 scales , 133 searchable reference items and a notes quiz.">
     <meta name="keywords" content="">
 
@@ -13,12 +13,12 @@
     <meta property="og:image" content="http://allforces.com/nota/assets/images/socialimage.jpg" />
     <!-- Social: Twitter -->
     <meta name="twitter:card" content=" site.socialImage " />
-    <meta name="twitter:title" content="Nota - Piano music app for the iPhone and iPad" />
+    <meta name="twitter:title" content="Nota - A piano music app for the iPhone" />
     <meta name="twitter:description" content="An indispensible music learning app. Nota's impressive collection of tools includes 152 chords, 167 scales , 133 searchable reference items and a notes quiz." />
     <meta name="twitter:image" content="http://allforces.com/nota/assets/images/socialimage.jpg" />
     <!-- Social: Shared -->
     <meta property="og:url" content="">
-    <meta property="og:title" content="Nota - Piano music app for the iPhone and iPad" />
+    <meta property="og:title" content="Nota - A piano music app for the iPhone" />
     <meta property="og:description" content="An indispensible music learning app. Nota's impressive collection of tools includes 152 chords, 167 scales , 133 searchable reference items and a notes quiz." />
 
     <!-- CSS -->
@@ -38,7 +38,7 @@
     <nav class="nav">
         <div class="container">
             <div class="text-center pt-2">
-                <h1 class="fw-bold pt-5 text-center">Nota - Piano music app for the iPhone and iPad</h1> 
+                <h1 class="pt-5 fw-light text-center fs-3"><img src="./icon-128.svg" width="64" height="64" alt="Mota app icon" />&nbsp;&nbsp;<strong class="fw-bold">Nota</strong>&nbsp;&nbsp;Music Learning App</h1> 
             </div>
         </div>
     </nav>
@@ -67,6 +67,12 @@
           <figcaption class="blockquote-footer">The Apple Blog, Pick Of The Week</figcaption>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="wrapper animate alt-row">
+    <div class="container">
+      <h2 class="text-center fs-1 fw-light text-uppercase mt-5">Featured by <strong class="fw-bold">Apple</strong> on an iPad commercial</h2>
     </div>
   </div>
   
@@ -251,10 +257,7 @@
     <div class="container">
       <hr />
       <p class="float-end"><a href="#">Back to top</a></p>
-      <p>
-        Last Updated: April 10, 2024 <br />
-         Other apps by  <a href="http://allforces.com">All Forces</a>
-      </p>
+      <p>Other apps by  <a href="http://allforces.com">All Forces</a></p>
     </div>
   </footer>
 
