--- a/nota/index.html
+++ b/nota/index.html
@@ -44,7 +44,7 @@ description: "An indispensible music learning app. Nota's impressive collection 
           <div class="row align-items-center py-5">
               <div class="col-12 col-md-6 p-5 text-end">
                   <div class="d-inline-block bg-dark p-3 rounded-5">
-                      <img src="/assets/images/nota/nota-piano.png" class="rounded-5" alt="Nota Music App - Piano" width="295" height="640">
+                      <img src="/assets/images/nota/nota-piano.jpg" class="rounded-5" alt="Nota Music App - Piano" width="295" height="640">
                   </div>
               </div>
               <div class="col-12 col-md-6 p-5">
